updated for laravel_5.5 and bootstrap_4_beta

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -3,19 +3,10 @@
 @import url(https://fonts.googleapis.com/css?family=Raleway:300,400,600);
 
 // Variables
-@import "variables";
+//@import "variables";
 
 // Bootstrap
 @import "node_modules/bootstrap/scss/bootstrap.scss";
 
+// Font Awesome
 @import 'node_modules/font-awesome/scss/font-awesome.scss';
-
-html,body{
-    height: 100%;
-    width: 100%;
-    position: absolute;
-}
-
-#app {
-    height: 100%;
-}
